<resources>
    <string name="app_name">Bufadhi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sales_fragment_label">Sales Report</string>
    <string name="products">Products</string>
    <string name="product_details">Product details</string>
    <string name="delete_question">Are you sure you want to delete</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="item_name">Item name</string>
    <string name="item_quantity">Item quantity</string>
    <string name="add">Add</string>
    <string name="sell_history">Sell History</string>
</resources>